=== HEAD

* Add support for new json/jsonb functions added in PostgreSQL 9.4 to the pg_json_ops extension (jeremyevans)

* Add support for the PostgreSQL 9.4+ jsonb type to the pg_json_ops extension (jeremyevans)

* Add support for derived column lists to Sequel.as and SQL::AliasMethods#as (jeremyevans)

* Support connecting to a DB2 catalog name in the ibmdb adapter (calh) (#821)

* Fix warnings in some cases in the ibmdb adapter (calh) (#820)

* Add SQL::Function#with_ordinality for creating set returning functions WITH ORDINALITY (jeremyevans)

* Add SQL::Function#filter for creating filtered aggregate function calls (jeremyevans)

* Add SQL::Function#within_group for creating ordered-set and hypothetical-set aggregate functions (jeremyevans)

* Add SQL::Function#lateral, for creating set returning functions that will be preceded by LATERAL (jeremyevans)

* Add SQL::Function#quoted and #unquoted methods, to enable/disable quoting of function names (jeremyevans)

* Deprecate Dataset#{window,emulated,}_function_sql_append (jeremyevans)

* Deprecate SQL::WindowFunction and SQL::EmulatedFunction classes, switch to using options on SQL::Function (jeremyevans)

* Only modify changed_columns if deserialized value changes in the serialization plugin (jeremyevans) (#818)

* Support PostgreSQL 9.4+ jsonb type in the pg_json extension (jeremyevans)

* Allow Postgres::ArrayOp#unnest to accept arguments in the pg_array_ops extension (jeremyevans)

* Add Postgres::ArrayOp#cardinality to the pg_array_ops extension (jeremyevans)

* Add :check option to Database#create_view for WITH [LOCAL] CHECK OPTION support (jeremyevans)

* Add :concurrently option to Database#refresh_view on PostgreSQL to support concurrent refresh of materialized views (jeremyevans)

* Call the :after_connect Database option proc with both the connection and server/shard if it accepts 2 arguments (pedro, jeremyevans) (#813)
